# NeuroTwin

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
application_materials/: README.md
artifacts/: README.md
data/: README.md
docs/: README.md  value-proposition.md
docs/agent/: agent-skill-registry.md
docs/architecture/: 01_dsvl_concept.md  02_dsvl_mathematics.md  03_agent_workflow.md  capability-card.md  data-interface-boundary.md  dsvl-loop.md  experiment-os-policy.md  platform-architecture.md  technical-design.md  theoretical-model.md  virtual-experiment-world.md
docs/data/: data-card.md
docs/demo/: demo-overview.md  demo-report.md
docs/evidence/: evidence-card-schema.md  evidence-design.md  literature-research-brief.md
docs/guides/: documentation-guide.md
docs/learning/: acquisition-policy.md  learning-loop.md  next-experiment-plan.md  next-validation-packet.md
docs/maintainer/: repo-organization-guide.md
docs/research/: ai-surrogate-brain-review-summary.md  literature-review.md  project-log.md  research-notes.md  research-plan.md  three-paper-synthesis-and-directions.md
examples/: README.md  workflow_snapshot.json  workflow_snapshot.md
references/: README.md
results/: README.md
scripts/: build_demo_submission_pdf.py  build_project_proposal_pdf.py  export_workflow_snapshot.py  prepare_public_validation.py  run_demo.py
tests/: test_core.py  test_workflow_contract.py
(+9 files in other folders)
